--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,7 @@
 name: stringprocess
 description: A collection of string manipulation functions.
 version: 0.0.1
-#homepage: https://www.example.com
-#author: daftspaniel <email@example.com>
-
+author: daftspaniel <daftspaniel@gmail.com>
 environment:
   sdk: '>=1.20.1 <2.0.0'
 
