- Documentation added.  - Minor refactoring.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: stringprocess
 description: A collection of string manipulation functions.
-version: 0.0.1
+version: 0.0.3
 author: daftspaniel <daftspaniel@gmail.com>
 homepage: https://github.com/daftspaniel/stringprocess/
 environment:
-  sdk: '>=1.20.1 <2.0.0'
+  sdk: '>=1.20.1 <2.0.0-dev.infinity'
 
 dependencies:
   html_unescape: ^0.1.5
