--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stringprocess
-description: A collection of string manipulation functions.
-version: 0.0.8
+description: A string library for common string operations and general text helper functions.
+version: 0.0.9
 author: Davy Mitchell <daftspaniel@gmail.com>
 homepage: https://github.com/daftspaniel/stringprocess/
 environment:
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   html_unescape: ^0.1.5
-  markdown: ^0.11.1
+  markdown: ^1.1.1
 
 dev_dependencies:
   test: ^0.12.0
