--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stringprocess
-description: A string library for common string operations and general text helper functions.
-version: 1.0.5
+description: A string library for common string operations and general text processing functions.
+version: 1.0.6
 author: Davy Mitchell <daftspaniel@gmail.com>
 homepage: https://github.com/daftspaniel/stringprocess/
 environment:
